Remove unnecessary field from Sales Order endpoint #0000136896
+ Removed unnecessary fields from Sales Order endpoint, including fields
in header, shipping, items and billing.
