# routes/core/SalesOrders.js
@@ -29,14 +29,12 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
     let result = '';
 
     const eCommerceWebsiteId = req.body.Website || '';
-    const siteName = req.body.SiteName || '';
     const customerGuid = req.body.CustomerGuid || '';
     const customerId = req.body.CustomerId || '';
     const customerBranch = req.body.CustomerBranch || '';
-    const creditTermsId = req.body.CreditTermsId || '';
     const effectiveDate = req.body.EffectiveDate || new Date(Date.now() - ((new Date()).getTimezoneOffset() * 60000)).toISOString();
     const customerOrderNumber = req.body.CustomerOrderNumber || '';
-    const customerContact = req.body.CustomerContact || '';
+    let customerContact = '';
     let delName = req.body.SalesOrderShipping.ShippingName || '';
     let delTitle = req.body.SalesOrderShipping.ShippingTitle || '';
     let delFirstName = req.body.SalesOrderShipping.ShippingFirstName || '';
@@ -51,7 +49,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
     const currencyCode = req.body.CurrencyCode || '';
     const portalUserName = req.body.WebsiteUserName || '';
     const freightMethodId = req.body.SalesOrderShipping.FreightMethodId || '';
-    const salesOrderPrefixId = req.body.SalesOrderPrefixId || '';
     const totalOrderValue = req.body.TotalOrderValue || 0;
     let salesOrder = 0;
     let salesOrderId = '';
@@ -64,9 +61,11 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
         return utils.reject(res, req, utils.reasons.requiredParam);
     }
 
-    if (!eCommerceWebsiteId || !customerOrderNumber || !customerContact || !freightMethodId || !delName ||
+    if (!eCommerceWebsiteId || !customerOrderNumber || !freightMethodId || !delName ||
         !delAddress || !delCountryCode || !delPostalCode || !currencyCode || !portalUserName) {
         return utils.reject(res, req, utils.reasons.requiredParam);
+    } else {
+        customerContact = delName;
     }
 
     if (!customerGuid && (!customerId && !customerBranch)) {
@@ -93,11 +92,9 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
 
             return transaction.sql("EXEC wsp_RestApiSalesOrdersInsert \
                     @eCommerceWebsiteId = '" + eCommerceWebsiteId + "',\
-                    @siteName = '" + siteName + "',\
                     @customerGuid = '" + customerGuid + "',\
                     @customerId = '" + customerId + "',\
                     @customerBranch = '" + customerBranch + "',\
-                    @creditTermsId = '" + creditTermsId + "',\
                     @effectiveDate = '" + effectiveDate + "',\
                     @customerOrderNumber = '" + customerOrderNumber + "',\
                     @customerContact = '" + customerContact + "',\
@@ -115,7 +112,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
                     @currencyCode = '" + currencyCode + "',\
                     @portalUserName = '" + portalUserName + "',\
                     @freightMethodId = '" + freightMethodId + "',\
-                    @salesOrderPrefixId = '" + salesOrderPrefixId + "',\
                     @scope = 'postSalesOrders'")
                 .execute();
         })
@@ -128,9 +124,7 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
             } else {
                 throw new Error(result);
             }
-
-            const taxCodeId = req.body.SalesOrderShipping.TaxCodeId || '';
-            const taxCodeSecondaryId = req.body.SalesOrderShipping.TaxCodeSecondaryId || '';
+            
             const curPrice = req.body.SalesOrderShipping.Price;
 
             return transaction.sql("EXEC wsp_RestApiSalesOrderItemsInsert \
@@ -149,8 +143,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
                     @delPhoneNumber = '" + delPhoneNumber + "',\
                     @delEmailAddress = '" + delEmailAddress + "',\
                     @freightMethodId = '" + freightMethodId + "',\
-                    @taxCodeId = '" + taxCodeId + "',\
-                    @taxCodeSecondaryId = '" + taxCodeSecondaryId + "',\
                     @curPrice = " + curPrice)
                 .execute();
         })
@@ -167,50 +159,18 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
                 return new Promise((resolve, reject) => {
                     const sku = salesOrderItem.Sku || '';
                     const quantity = salesOrderItem.Quantity || 0;
-                    const warrantyId = salesOrderItem.WarrantyId || '';
-                    const curSurcharge = salesOrderItem.Surcharge || 0;
-
-                    if (salesOrderItem.ShippingName) {
-                        let delName = salesOrderItem.ShippingName || '';
-                        let delTitle = salesOrderItem.ShippingTitle || '';
-                        let delFirstName = salesOrderItem.ShippingFirstName || '';
-                        let delLastName = salesOrderItem.ShippingLastName || '';
-                        let delAddress = salesOrderItem.ShippingAddress || '';
-                        let delCity = salesOrderItem.ShippingCity || '';
-                        let delRegion = salesOrderItem.ShippingRegion || '';
-                        let delPostalCode = salesOrderItem.ShippingPostalCode || '';
-                        let delCountryCode = salesOrderItem.ShippingCountryCode || '';
-                        let delPhoneNumber = salesOrderItem.ShippingPhoneNumber || '';
-                        let delEmailAddress = salesOrderItem.ShippingEmailAddress || '';
-                    } else {
-                        let delName = req.body.SalesOrderShipping.ShippingName || '';
-                        let delTitle = req.body.SalesOrderShipping.ShippingTitle || '';
-                        let delFirstName = req.body.SalesOrderShipping.ShippingFirstName || '';
-                        let delLastName = req.body.SalesOrderShipping.ShippingLastName || '';
-                        let delAddress = req.body.SalesOrderShipping.ShippingAddress || '';
-                        let delCity = req.body.SalesOrderShipping.ShippingCity || '';
-                        let delRegion = req.body.SalesOrderShipping.ShippingRegion || '';
-                        let delPostalCode = req.body.SalesOrderShipping.ShippingPostalCode || '';
-                        let delCountryCode = req.body.SalesOrderShipping.ShippingCountryCode || '';
-                        let delPhoneNumber = req.body.SalesOrderShipping.ShippingPhoneNumber || '';
-                        let delEmailAddress = req.body.SalesOrderShipping.ShippingEmailAddress || '';
-                    }
 
                     if (!delName || !delAddress || !delCountryCode || !delPostalCode) {
                         return reject(utils.reasons.requiredParam);
                     }
 
-                    const priceListId = salesOrderItem.PriceListId || '';
-                    const discountId = salesOrderItem.DiscountId || '';
-                    const taxCodeId = salesOrderItem.TaxCodeId || '';
-                    const taxCodeSecondaryId = salesOrderItem.TaxCodeSecondaryId || '';
                     const curPrice = salesOrderItem.Price || 0;
 
                     if (!quantity) {
                         return reject(utils.reasons.requiredParam);
                     }
 
-                    if (isNaN(parseFloat(curPrice)) || isNaN(parseFloat(quantity)) || isNaN(parseFloat(curSurcharge))) {
+                    if (isNaN(parseFloat(curPrice)) || isNaN(parseFloat(quantity))) {
                         return reject(utils.reasons.invalidParam);
                     }
 
@@ -223,8 +183,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
                         @itemType = 'P',\
                         @sku = '" + sku + "',\
                         @quantity = " + quantity + ",\
-                        @warrantyId = '" + warrantyId + "',\
-                        @curSurcharge = " + curSurcharge + ",\
                         @delName = '" + delName + "',\
                         @delTitle = '" + delTitle + "',\
                         @delFirstName = '" + delFirstName + "',\
@@ -236,10 +194,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
                         @delCountryCode = '" + delCountryCode + "',\
                         @delPhoneNumber = '" + delPhoneNumber + "',\
                         @delEmailAddress = '" + delEmailAddress + "',\
-                        @priceListId = '" + priceListId + "',\
-                        @discountId = '" + discountId + "',\
-                        @taxCodeId = '" + taxCodeId + "',\
-                        @taxCodeSecondaryId = '" + taxCodeSecondaryId + "',\
                         @curPrice = " + curPrice + ";";
 
                     return resolve();
@@ -259,20 +213,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
             }
 
             const creditCardTypeId = req.body.SalesOrderBilling.PaymentType || '';
-            const cardName = req.body.SalesOrderBilling.CardName || '';
-            const cardNumber = req.body.SalesOrderBilling.CardNumber || '';
-            const startMonth = req.body.SalesOrderBilling.CardStartMonth || 0;
-            const startYear = req.body.SalesOrderBilling.CardStartYear || 0;
-            const expiryMonth = req.body.SalesOrderBilling.CardExpiryMonth || 0;
-            const expiryYear = req.body.SalesOrderBilling.CardExpiryYear || 0;
-            const issue = req.body.SalesOrderBilling.CardIssue || '';
-            const address = req.body.SalesOrderBilling.BillingAddress || '';
-            const city = req.body.SalesOrderBilling.BillingCity || '';
-            const region = req.body.SalesOrderBilling.BillingRegion || '';
-            const postalCode = req.body.SalesOrderBilling.BillingPostalCode || '';
-            const countryCode = req.body.SalesOrderBilling.BillingCountryCode || '';
-            const lastDigits = req.body.SalesOrderBilling.CardLastDigits || '';
-            const authorisation = req.body.SalesOrderBilling.CardAuthorisation || '';
             const curTransactionValue = req.body.SalesOrderBilling.CardPaymentReceived || 0;
 
             if (typeof curTransactionValue === 'undefined' || !creditCardTypeId) {
@@ -286,20 +226,6 @@ router.post('/', passport.authenticate('bearer', { session: false }), function (
             return transaction.sql("DECLARE @error NVARCHAR(1000) EXEC wsp_RestApiSalesOrdersPayment \
                     @salesOrder = " + salesOrder + ",\
                     @creditCardTypeId = '" + creditCardTypeId + "',\
-                    @cardName = '" + cardName + "',\
-                    @cardNumber = '" + cardNumber + "',\
-                    @startMonth = " + startMonth + ",\
-                    @startYear = " + startYear + ",\
-                    @expiryMonth = " + expiryMonth + ",\
-                    @expiryYear = " + expiryYear + ",\
-                    @issue = '" + issue + "',\
-                    @address = '" + address + "',\
-                    @city = '" + city + "',\
-                    @region = '" + region + "',\
-                    @postalCode = '" + postalCode + "',\
-                    @countryCode = '" + countryCode + "',\
-                    @lastDigits = '" + lastDigits + "',\
-                    @authorisation = '" + authorisation + "',\
                     @curTransactionValue = " + curTransactionValue + ",\
                     @error = @error OUTPUT")
                 .execute();
